--- a/Resources/views/lost_password.html.twig
+++ b/Resources/views/lost_password.html.twig
@@ -1,4 +1,4 @@
-{% block title %}Registration{% endblock %}
+{% block title %}Lost password{% endblock %}
 {% trans_default_domain 'rd_authentication' %}
 
 {% block body %}
@@ -6,8 +6,7 @@
         <div class="col-md-6">
             <div class="card mx-4">
                 <div class="card-body p-4">
-                    <h1>Register</h1>
-                    <p class="text-muted">Create your account</p>
+                    <h1>Lost password</h1>
 
                 </div>
             </div>
