--- a/Resources/views/login.html.twig
+++ b/Resources/views/login.html.twig
@@ -1,44 +1,46 @@
-{% trans_default_domain 'rd_authentication' %}
-{% block title %}Login{% endblock %}
-
+{% extends '@RdAuthentication/layout.html.twig' %}
 {% block body %}
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card-group">
-                <div class="card p-4">
-                    <div class="card-body">
-                        <h1>Login</h1>
-                        <p class="text-muted">Sign In to your account</p>
-                        {% if error %}
-                            <div class="alert alert-danger">
-                                {{ error.messageKey }}
+    <div class="container">
+        <div class="d-flex justify-content-center h-100">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Sign In</h3>
+                </div>
+                <div class="card-body">
+                    {% if error %}
+                        <div class="error">
+                            {{ error.messageKey }}
+                        </div>
+                    {% endif %}
+                    <form action="{{ path('rd_authentication_login') }}" method="post">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                             </div>
-                        {% endif %}
-                        <form action="{{ path('rd_authentication_login') }}" method="post">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                                </div>
-                                <input type="text" id="username" name="_username" value="{{ last_username }}"
-                                       class="form-control" placeholder="{{ 'ui.email'|trans }}"/>
+                            <input type="text" id="username" name="_username" value="{{ last_username }}"
+                                   class="form-control" placeholder="{{ 'ui.email'|trans }}"/>
+                        </div>
+                        <div class="input-group mb-4">
+                            <div class="input-group-prepend"><span class="input-group-text"><i
+                                            class="fas fa-lock"></i></span>
                             </div>
-                            <div class="input-group mb-4">
-                                <div class="input-group-prepend"><span class="input-group-text"><i
-                                                class="fas fa-lock"></i></span>
-                                </div>
-                                <input type="password" id="password" name="_password" class="form-control"
-                                       placeholder="{{ 'ui.password'|trans }}"/>
-                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                            <input type="password" id="password" name="_password" class="form-control"
+                                   placeholder="{{ 'ui.password'|trans }}"/>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <button type="submit" class="btn btn-primary px-4">{{ 'btn.login'|trans }}</button>
                             </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <button type="submit" class="btn btn-primary px-4">{{ 'btn.login'|trans }}</button>
-                                </div>
-                                <div class="col-6 text-right">
-                                    <button class="btn btn-link px-0" type="button">Forgot password?</button>
-                                </div>
-                            </div>
-                        </form>
+                        </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    </form>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-center links">
+                        Don't have an account?<a href="{{ path('rd_authentication_registration') }}">Sign Up</a>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <a href="{{ path('rd_authentication_lost_password') }}">Forgot your password?</a>
                     </div>
                 </div>
             </div>
