--- a/Resources/views/lost_password.html.twig
+++ b/Resources/views/lost_password.html.twig
@@ -1,15 +1,5 @@
+{% extends '@RdAuthentication/layout.html.twig' %}
 {% block title %}Lost password{% endblock %}
-{% trans_default_domain 'rd_authentication' %}
-
 {% block body %}
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card mx-4">
-                <div class="card-body p-4">
-                    <h1>Lost password</h1>
 
-                </div>
-            </div>
-        </div>
-    </div>
 {% endblock %}
