--- a/Resources/views/registration.html.twig
+++ b/Resources/views/registration.html.twig
@@ -1,67 +1,77 @@
+{% extends '@RdAuthentication/layout.html.twig' %}
 {% block title %}Registration{% endblock %}
-{% trans_default_domain 'rd_authentication' %}
-
 {% block body %}
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card mx-4">
-                <div class="card-body p-4">
-                    <div class="row">
-                        <h1>Register</h1>
-                        <p class="text-muted">Create your account</p>
-                        {{ form_start(form) }}
-                        <div class="row clearfix wow fadeIn">
-                            <div class="col-sm-12">
-                                <div class="form-group form-float">
-                                    <div class="form-line">
-                                        <label class="form-label">{{ 'username'|trans }}</label>
-                                        {{ form_errors(form.username) }}
-                                        {{ form_widget(form.username, {'attr': {'class' : 'form-control'}}) }}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group form-float">
-                                    <div class="form-line">
-                                        <label class="form-label">{{ 'email'|trans }}</label>
-                                        {{ form_errors(form.email) }}
-                                        {{ form_widget(form.email, {'attr': {'class' : 'form-control'}}) }}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group form-float">
-                                    <div class="form-line">
-                                        <label class="form-label">{{ 'password'|trans }}</label>
-                                        {{ form_errors(form.plainPassword.first) }}
-                                        {{ form_widget(form.plainPassword.first, {'attr': {'class' : 'form-control'}}) }}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group form-float">
-                                    <div class="form-line">
-                                        <label class="form-label">{{ 'password_second'|trans }}</label>
-                                        {{ form_errors(form.plainPassword.second) }}
-                                        {{ form_widget(form.plainPassword.second, {'attr': {'class' : 'form-control'}}) }}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group form-float">
-                                    <div class="form-line">
-                                        <a href="#"
-                                           target="_blank">{{ 'conditions'|trans }}</a><br><br>
-                                        <label class="form-label">{{ 'conditions_accepted'|trans }}</label>
-                                        {{ form_errors(form.termsAccepted) }}
-                                        {{ form_widget(form.termsAccepted) }}
-                                    </div>
-                                </div>
-                                <button type="submit"
-                                        class="btn btn-info pull-left">{{ 'register'|trans }}</button>
-                            </div>
+    <style>
+        .card {
+            height: 630px;
+            margin-top: auto;
+            margin-bottom: auto;
+            width: 450px;
+            background-color: rgba(0, 0, 0, 0.5) !important;
+        }
+        p, label{
+            color: white;
+        }
+    </style>
+    <div class="container">
+        <div class="d-flex justify-content-center h-100">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Sign In</h3>
+                </div>
+                <div class="card-body">
+                    {{ form_start(form) }}
+                    <p>Username</p>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        {{ form_end(form) }}
+                        {{ form_errors(form.username) }}
+                        {{ form_widget(form.username, {'attr': {'class' : 'form-control'}}) }}
+
+                    </div>
+                    <p>Email</p>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                        </div>
+                        {{ form_errors(form.email) }}
+                        {{ form_widget(form.email, {'attr': {'class' : 'form-control'}}) }}
+
+                    </div>
+                    <p>Password</p>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        </div>
+                        {{ form_errors(form.plainPassword.first) }}
+                        {{ form_widget(form.plainPassword.first, {'attr': {'class' : 'form-control'}}) }}
+
+                    </div>
+                    <p>Password verify</p>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        </div>
+                        {{ form_errors(form.plainPassword.second) }}
+                        {{ form_widget(form.plainPassword.second, {'attr': {'class' : 'form-control'}}) }}
+
+                    </div>
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <label class="form-label"><a href="#"
+                                                         target="_blank">{{ 'conditions_accepted'|trans }}</a></label>
+                            {{ form_errors(form.termsAccepted) }}
+                            {{ form_widget(form.termsAccepted) }}
+                        </div>
+                    </div>
+                    <button type="submit"
+                            class="btn btn-primary px-4">{{ 'register'|trans }}</button>
+                    {{ form_end(form) }}
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-center links">
+                        Already have an account?<a href="{{ path('rd_authentication_login') }}">Sign Up</a>
                     </div>
                 </div>
             </div>
