--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -22,6 +22,7 @@
                 color: red;
                 margin-bottom: 10px;
                 text-align: center;
+                float: right;
             }
             .container {
                 height: 100%;
