--- a/Resources/views/registration.html.twig
+++ b/Resources/views/registration.html.twig
@@ -11,51 +11,54 @@
         }
         p, label{
             color: white;
+            float: left;
+        }
+        ul{
+            list-style-type:none;
         }
     </style>
     <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
                 <div class="card-header">
-                    <h3>Sign In</h3>
+                    <h3>Sign Up</h3>
                 </div>
                 <div class="card-body">
                     {{ form_start(form) }}
-                    <p>Username</p>
+                    <p>Username </p>
+                    <span class="error">{{ form_errors(form.username) }}</span>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        {{ form_errors(form.username) }}
                         {{ form_widget(form.username, {'attr': {'class' : 'form-control'}}) }}
 
                     </div>
                     <p>Email</p>
+                    <span class="error">{{ form_errors(form.email) }}</span>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                         </div>
-                        {{ form_errors(form.email) }}
                         {{ form_widget(form.email, {'attr': {'class' : 'form-control'}}) }}
 
                     </div>
                     <p>Password</p>
+                    <span class="error">{{ form_errors(form.plainPassword.first) }}</span>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        {{ form_errors(form.plainPassword.first) }}
                         {{ form_widget(form.plainPassword.first, {'attr': {'class' : 'form-control'}}) }}
 
                     </div>
                     <p>Password verify</p>
+                    <span class="error">{{ form_errors(form.plainPassword.second) }}</span>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        {{ form_errors(form.plainPassword.second) }}
                         {{ form_widget(form.plainPassword.second, {'attr': {'class' : 'form-control'}}) }}
-
                     </div>
                     <div class="form-group form-float">
                         <div class="form-line">
@@ -71,7 +74,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="d-flex justify-content-center links">
-                        Already have an account?<a href="{{ path('rd_authentication_login') }}">Sign Up</a>
+                        Already have an account?<a href="{{ path('rd_authentication_login') }}">Sign In</a>
                     </div>
                 </div>
             </div>
