--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -11,6 +11,7 @@
             @import url('https://fonts.googleapis.com/css?family=Numans');
 
             html, body {
+                background-color: #ebebeb;
                 background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -18,10 +19,13 @@
                 font-family: 'Numans', sans-serif;
             }
 
+            .input-group-prepend, input, button, .input-group{
+                border-radius: 0px;
+            }
             .error{
                 color: red;
-                margin-bottom: 10px;
                 text-align: center;
+                font-size: small;
                 float: right;
             }
             .container {
@@ -30,11 +34,13 @@
             }
 
             .card {
+                border-radius: 0px;
                 height: 370px;
                 margin-top: auto;
                 margin-bottom: auto;
                 width: 400px;
-                background-color: rgba(0, 0, 0, 0.5) !important;
+                background-color: white;
+                box-shadow: 1px 2px 5px #575757;
             }
 
             .card-header h3 {
