--- a/Resources/views/login.html.twig
+++ b/Resources/views/login.html.twig
@@ -3,12 +3,10 @@
     <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
-                <div class="card-header">
-                    <h3>Sign In</h3>
-                </div>
                 <div class="card-body">
+                    <h3 class="text-center">Sign In</h3>
                     {% if error %}
-                        <div class="error">
+                        <div class="error" style="float: none;">
                             {{ error.messageKey }}
                         </div>
                     {% endif %}
@@ -37,7 +35,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="d-flex justify-content-center links">
-                        Don't have an account?<a href="{{ path('rd_authentication_registration') }}">Sign Up</a>
+                        <span style="color: grey;">Don't have an account?</span><a href="{{ path('rd_authentication_registration') }}">Sign Up</a>
                     </div>
                     <div class="d-flex justify-content-center">
                         <a href="{{ path('rd_authentication_lost_password') }}">Forgot your password?</a>
