--- a/Resources/views/lost_password.html.twig
+++ b/Resources/views/lost_password.html.twig
@@ -1,5 +1,34 @@
 {% extends '@RdAuthentication/layout.html.twig' %}
 {% block title %}Lost password{% endblock %}
 {% block body %}
-
+    <div class="container">
+        <div class="d-flex justify-content-center h-100">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="text-center">Lost password</h3>
+                    {{ form_start(form) }}
+                    <p>Email</p>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                        </div>
+                        {{ form_widget(form.email, {'attr': {'class' : 'form-control'}}) }}
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <button type="submit" class="btn btn-primary px-4">Confirm</button>
+                        </div>
+                    </div>
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    {{ form_end(form) }}
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-center links">
+                        <span style="color: grey;">Don't have an account?</span><a
+                                href="{{ path('rd_authentication_registration') }}">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
