--- a/Resources/views/login.html.twig
+++ b/Resources/views/login.html.twig
@@ -16,18 +16,18 @@
                                 <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                             </div>
                             <input type="text" id="username" name="_username" value="{{ last_username }}"
-                                   class="form-control" placeholder="{{ 'ui.email'|trans }}"/>
+                                   class="form-control" placeholder="email"/>
                         </div>
                         <div class="input-group mb-4">
                             <div class="input-group-prepend"><span class="input-group-text"><i
                                             class="fas fa-lock"></i></span>
                             </div>
                             <input type="password" id="password" name="_password" class="form-control"
-                                   placeholder="{{ 'ui.password'|trans }}"/>
+                                   placeholder="password"/>
                         </div>
                         <div class="row">
                             <div class="col-6">
-                                <button type="submit" class="btn btn-primary px-4">{{ 'btn.login'|trans }}</button>
+                                <button type="submit" class="btn btn-primary px-4">Login</button>
                             </div>
                         </div>
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
