--- a/Resources/views/registration.html.twig
+++ b/Resources/views/registration.html.twig
@@ -63,11 +63,11 @@
                     <div class="form-group form-float">
                         <div class="custom-control custom-checkbox mr-sm-2">
                             {{ form_widget(form.termsAccepted, {'attr': {'class': 'custom-control-input'} }) }}
-                            <label class="custom-control-label" for="user_termsAccepted"><a href="#" data-toggle="modal" data-target="#conditionsModal">{{ 'conditions_accepted'|trans }}</a></label>
+                            <label class="custom-control-label" for="user_termsAccepted"><a href="#" data-toggle="modal" data-target="#conditionsModal">Accept conditions</a></label>
                         </div>
                     </div>
                     <button type="submit"
-                            class="btn btn-primary px-4">{{ 'register'|trans }}</button>
+                            class="btn btn-primary px-4">Create account</button>
                     {{ form_end(form) }}
                 </div>
                 <div class="card-footer">
