Correct links in emails

--- a/Resources/views/mail/mail_template.html.twig
+++ b/Resources/views/mail/mail_template.html.twig
@@ -50,7 +50,7 @@
     </div>
 </div>
 <div class="page-footer">
-    <a href="yourpage.net" target="_blank">www.yourpage.net</a>
+    <a href="{{ app.request.uriForPath('/') }}" target="_blank">{{ app.request.uriForPath('/') }}</a>
 </div>
 </body>
 </html>
