--- a/Resources/views/mail/registration_successful.html.twig
+++ b/Resources/views/mail/registration_successful.html.twig
@@ -2,5 +2,5 @@
 {% block body %}
     <h4>Hello,</h4>
     <p>Thank you for registration. To confirm your account please visit link bellow.</p>
-    <p><a href="https://yourpage.net/confirm-account/{{ user.getConfirmHash() }}">Confirmation link</a></p>
+    <p><a href="{{ app.request.uriForPath('/confirm-account/') }}{{ user.getConfirmHash() }}">Confirmation link</a></p>
 {% endblock %}
