--- a/Resources/views/mail/reset_password.html.twig
+++ b/Resources/views/mail/reset_password.html.twig
@@ -2,5 +2,5 @@
 {% block body %}
     <h4>Hello,</h4>
     <p>To reset your password please visit link bellow.</p>
-    <p><a href="https://yourpage.net/create-password/{{ user.getConfirmHash() }}">Confirmation link</a></p>
+    <p><a href="{{ app.request.uriForPath('/create-password/') }}{{ user.getConfirmHash() }}">Confirmation link</a></p>
 {% endblock %}
