feat(conditions): Conditions at registration page from database

--- a/Resources/views/registration.html.twig
+++ b/Resources/views/registration.html.twig
@@ -9,7 +9,8 @@
             width: 450px;
             /*background-color: rgba(0, 0, 0, 0.5) !important;*/
         }
-        .modal-content{
+
+        .modal-content {
             /*height: 630px;*/
             /*margin-top: auto;*/
             /*margin-bottom: auto;*/
@@ -63,35 +64,34 @@
                     <div class="form-group form-float">
                         <div class="custom-control custom-checkbox mr-sm-2">
                             {{ form_widget(form.termsAccepted, {'attr': {'class': 'custom-control-input'} }) }}
-                            <label class="custom-control-label" for="user_termsAccepted"><a href="#" data-toggle="modal" data-target="#conditionsModal">Accept conditions</a></label>
+                            <label class="custom-control-label" for="user_termsAccepted"><a href="#" data-toggle="modal"
+                                                                                            data-target="#conditionsModal">Accept
+                                    conditions</a></label>
                         </div>
                     </div>
                     <button type="submit"
-                            class="btn btn-primary px-4">Create account</button>
+                            class="btn btn-primary px-4">Create account
+                    </button>
                     {{ form_end(form) }}
                 </div>
                 <div class="card-footer">
                     <div class="d-flex justify-content-center links">
-                       <span style="color: grey;">Already have an account?</span> <a href="{{ path('rd_authentication_login') }}">Sign In</a>
+                        <span style="color: grey;">Already have an account?</span> <a
+                                href="{{ path('rd_authentication_login') }}">Sign In</a>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Modal -->
-        <div class="modal fade bd-example-modal-lg" id="conditionsModal" tabindex="-1" role="dialog" aria-labelledby="conditionsModal" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+        <div class="modal fade bd-example-modal-lg" id="conditionsModal" tabindex="-1" role="dialog"
+             aria-labelledby="conditionsModal" aria-hidden="true" data-backdrop="static" data-keyboard="false">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
                         <h5 class="text-center">Conditions</h5><br>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam faucibus mi quis velit. Vestibulum fermentum tortor id mi. Suspendisse sagittis ultrices augue. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Duis bibendum, lectus ut viverra rhoncus, dolor nunc faucibus libero, eget facilisis enim ipsum id lacus. Maecenas ipsum velit, consectetuer eu lobortis ut, dictum at dui. Integer malesuada. Fusce tellus odio, dapibus id fermentum quis, suscipit id erat. Aenean id metus id velit ullamcorper pulvinar. Etiam sapien elit, consequat eget, tristique non, venenatis quis, ante. Aliquam erat volutpat. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla turpis magna, cursus sit amet, suscipit a, interdum id, felis. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Praesent dapibus. Pellentesque arcu. In sem justo, commodo ut, suscipit at, pharetra vitae, orci.</p>
-
-                        <p>Etiam bibendum elit eget erat. Duis risus. Vivamus porttitor turpis ac leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras elementum. Pellentesque sapien. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Pellentesque pretium lectus id turpis. In convallis. Mauris elementum mauris vitae tortor. Nulla turpis magna, cursus sit amet, suscipit a, interdum id, felis.</p>
-
-                        <p>Mauris elementum mauris vitae tortor. Integer lacinia. Maecenas fermentum, sem in pharetra pellentesque, velit turpis volutpat ante, in pharetra metus odio a lectus. In dapibus augue non sapien. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Maecenas libero. Curabitur vitae diam non enim vestibulum interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Nulla non lectus sed nisl molestie malesuada. Cras elementum. In dapibus augue non sapien. Nullam at arcu a est sollicitudin euismod. Aliquam erat volutpat. In dapibus augue non sapien. Etiam egestas wisi a erat. Maecenas aliquet accumsan leo. Morbi imperdiet, mauris ac auctor dictum, nisl ligula egestas nulla, et sollicitudin sem purus in lacus. Pellentesque ipsum.</p>
-
-                        <p>Nullam rhoncus aliquam metus. Praesent dapibus. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Nullam justo enim, consectetuer nec, ullamcorper ac, vestibulum in, elit. Morbi scelerisque luctus velit. Integer vulputate sem a nibh rutrum consequat. Integer in sapien. Etiam egestas wisi a erat. Nam quis nulla. Nulla quis diam. Sed ac dolor sit amet purus malesuada congue. Quisque porta.</p>
-
-                        <p>Nulla non arcu lacinia neque faucibus fringilla. Etiam dictum tincidunt diam. In laoreet, magna id viverra tincidunt, sem odio bibendum justo, vel imperdiet sapien wisi sed libero. Pellentesque pretium lectus id turpis. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Nullam dapibus fermentum ipsum. Nulla turpis magna, cursus sit amet, suscipit a, interdum id, felis. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Nullam faucibus mi quis velit. Maecenas lorem. Aenean placerat. Morbi imperdiet, mauris ac auctor dictum, nisl ligula egestas nulla, et sollicitudin sem purus in lacus. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. In convallis. In laoreet, magna id viverra tincidunt, sem odio bibendum justo, vel imperdiet sapien wisi sed libero.</p>
+                        {% if conditions %}
+                            {{ conditions.text|raw }}<br>
+                        {% endif %}
                         <div class="center-block">
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                         </div>
