feat(Config): User can config background image, email homepage

--- a/Resources/views/create_password.html.twig
+++ b/Resources/views/create_password.html.twig
@@ -1,5 +1,10 @@
 {% extends '@RdAuthentication/layout.html.twig' %}
 {% block body %}
+    <style>
+        html, body {
+            background-image: url({{ background }});
+        }
+    </style>
     <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
