--- a/Resources/views/registration.html.twig
+++ b/Resources/views/registration.html.twig
@@ -2,6 +2,9 @@
 {% block title %}Registration{% endblock %}
 {% block body %}
     <style>
+        html, body {
+            background-image: url({{ background }});
+        }
         .card {
             height: 630px;
             margin-top: auto;
