--- a/Resources/views/login.html.twig
+++ b/Resources/views/login.html.twig
@@ -1,5 +1,11 @@
 {% extends '@RdAuthentication/layout.html.twig' %}
+
 {% block body %}
+    <style>
+        html, body {
+            background-image: url({{ background }});
+        }
+    </style>
     <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
@@ -35,7 +41,8 @@
                 </div>
                 <div class="card-footer">
                     <div class="d-flex justify-content-center links">
-                        <span style="color: grey;">Don't have an account?</span><a href="{{ path('rd_authentication_registration') }}">Sign Up</a>
+                        <span style="color: grey;">Don't have an account?</span><a
+                                href="{{ path('rd_authentication_registration') }}">Sign Up</a>
                     </div>
                     <div class="d-flex justify-content-center">
                         <a href="{{ path('rd_authentication_lost_password') }}">Forgot your password?</a>
