--- a/Resources/views/lost_password.html.twig
+++ b/Resources/views/lost_password.html.twig
@@ -1,6 +1,11 @@
 {% extends '@RdAuthentication/layout.html.twig' %}
 {% block title %}Lost password{% endblock %}
 {% block body %}
+    <style>
+        html, body {
+            background-image: url({{ background }});
+        }
+    </style>
     <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
